--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "username": "mattpearson's blog",
+    "username": "mattpearson",
     "repositoryName": "computer science and quantiative finance",
     "branch": "master"
   },
