--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "mattpearson",
-    "repositoryName": "computer science and quantiative finance",
+    "repositoryName": "mattpearson.github.io",
     "branch": "master"
   },
   "theme": {
